--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -50,11 +50,9 @@
             <span class="arrow"></span>
         </a>
         <ul class="sub">
+            <li><a class="" href="/Document/"> @Document.V_View_All</a></li>
             <li><a class="" href="/Document/Create/"> @Account.V_Create_Document</a></li>            
-            <li><a class="" href="/Document/Folder/"> @Account.V_Folders</a></li>
-            <li><a class="" href="/Document/ViewAsTable/"> @Document.V_View_As_Table</a></li>
-            <li><a class="" href="/Document/SearchForDocument/">@Document.V_Search_For_Document</a></li>
-            
+            <li><a class="" href="/Document/Folder/"> @Document.V_View_Folders</a></li>
         </ul>
     </li>
          
