--- a/totalhr.web/Content/css/companydocument.css
+++ b/totalhr.web/Content/css/companydocument.css
@@ -4,7 +4,7 @@ html {
 }
 
 .foldergroup {
-    float:left;width:800px;
+    float:left;width:90%;
     font-size:9pt;
 }
 
@@ -65,7 +65,7 @@ html {
             }
              
     .document .core .right {
-        float:left;
+        /*float:left;*/
         width:28%;
         text-align:right;
         padding: 5px 1%;
@@ -84,7 +84,7 @@ html {
 
     .document .moreinfo {
         color:white;
-        float:left;
+        /*float:left;*/
         width:100%;background:rgba(0,0,0,0.3);
         padding-top:5px;
     }
@@ -101,7 +101,7 @@ html {
         }
 
 #searchbox {
-    float:left;
+    /*float:left;*/
     width:800px;
     font: 0.80em/1.13em "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
 }
@@ -130,16 +130,16 @@ html {
 }
 
 .foldergroup fieldset legend span.collapse {
-     position:relative;
-        top:10px;   
-        padding:20px 20px 0 0;
+    position:relative;
+    top:10px;   
+    padding:20px 20px 0 0;
     background:transparent url('/Content/images/folder-open.png') center center no-repeat;
     cursor:pointer;
 }
 
 div.wide {
     width:98%;
-    float:left;
+    /*float:left;*/
     text-align:left;
     margin:10px 0;
     padding:1%;
