--- a/totalhr.web/Views/Shared/_FolderCreate.cshtml
+++ b/totalhr.web/Views/Shared/_FolderCreate.cshtml
@@ -10,42 +10,52 @@
 
     string popupStyle = hide ? @" style=""display:none;"" " : "";
 }
-<div id="frmCreateFolder" class="popupedit" @Html.Raw(popupStyle)>
-    <div>
-        <b>@Document.V_New_Folder</b>
-        <span class="spclose" onclick="CancelDivPopup('frmCreateFolder');">&nbsp;</span>
-    </div>
-        
-        
-    
 
-@using (Ajax.BeginForm("CreateFolder", "Document", new AjaxOptions { UpdateTargetId = "result" })) 
-{                  
-    <div class="formdiv smallform">
-        <div class="wrapper">
-            <br />
-            <div>
-                <label>@Document.V_DisplayName </label>
-                    <span><input type="text" name="DisplayName" id="DisplayName" /><b class="req"> *</b></span>                    
-            </div>
-            <div>
-                <label>@Document.V_Folder_Make_Public</label>
-                    <span>
-                        <input type="checkbox" name="ckMakePublic" id="ckMakePublic" onclick="ToggleCheckedValue(this, 'MakePublic');" />
-                        @Html.Hidden("MakePublic", 0)
-                    </span>                    
-            </div>    
-            <div>
-                <label>&nbsp;</label>
-                    <div style="width:100px;padding:5px;">
-                        <input type="submit" onsubmit="alert($('#MakePublic').val());return false;" value="@Document.V_Create" class="btnsmall" />
-                    </div>                    
-            </div>
-
-        </div>
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="myModalLabel">@Document.V_New_Folder</h3>
     </div>
-         
-    
-}
-        
- </div> 
+    <div class="modal-body">
+        <p id="result">
+        </p>
+
+        @using (Ajax.BeginForm("CreateFolderAjax", "Document", new AjaxOptions { HttpMethod = "POST", OnSuccess = "success" })) 
+        {                  
+            <div class="formdiv smallform">
+                <div class="wrapper">
+                    <br />
+                    <div>
+                        <label>@Document.V_DisplayName </label>
+                        <span><input type="text" name="DisplayName" id="DisplayName" /><b class="req"> *</b></span>                    
+                    </div>
+                    <div>
+                        <label>@Document.V_Folder_Make_Public</label>
+                        <span>
+                            <input type="checkbox" name="ckMakePublic" id="ckMakePublic" onclick="ToggleCheckedValue(this, 'MakePublic');" />
+                            @Html.Hidden("MakePublic", 0)
+                        </span>                    
+                    </div>    
+                    <div>
+                        <label>&nbsp;</label>
+                        <div style="width:100px;padding:5px;display:none;">
+                            <input type="submit" id="btnSubmit" value="@Document.V_Create" class="btnsmall" />
+                        </div>                    
+                    </div>
+
+                </div>
+            </div>
+        }
+    </div>
+    <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        <button class="btn btn-primary" onclick="$('#btnSubmit').click()">Save changes</button>
+    </div>
+</div>
+
+<script type="text/javascript">
+    function success(arg) {
+        var obj = arg.get_response().get_object();
+        alert(obj.FolderId);        
+    }
+</script>
