--- a/totalhr.web/Views/Calendar/Index.cshtml
+++ b/totalhr.web/Views/Calendar/Index.cshtml
@@ -1,24 +1,84 @@
-﻿@model List<totalhr.data.EF.Calendar>
+﻿@using totalhr.Resources
+@using totalhr.web.Areas.Admin.Models
+@using AH = totalhr.web.Areas.Admin.Helpers;
+
+@model IEnumerable<totalhr.data.EF.Calendar>
 
 @{
     ViewBag.Title = "Index";
+    var breadCrumbItems = new List<BreadCrumbItem>
+    {
+        new BreadCrumbItem{Url = "", Text = Calendar.V_Company_Calendars, Title= Calendar.V_Company_Calendars}
+    };
 }
 
-<div id="main">
-    <div class="content">
-        <h1>Company Calendars</h1>
-        
-        @foreach (var calender in Model)
-        {
-            <p>
-                @calender.Name
-                <a href="/Calendar/GenerateDefault/@calender.id" title="@calender.Name">@calender.Name</a>
-            </p>
+@section pagetitle{
+    @Document.V_Documents
+}
+
+@section breadcrumb{
+    @Html.Raw(AH.GenericHelper.MakeBreadCrumb(breadCrumbItems))
+}
+
+<div class="row-fluid">        
+    <div class="widget">
+        <div class="widget-title">
+            <h4><i class="icon-reorder"></i> @Calendar.V_Calendar_List</h4>
+            <span class="tools">
+                <a href="javascript:;" class="icon-chevron-down"></a>                   
+            </span>
+        </div>
+        <div class="widget-body form-horizontal"> 
             
-        }
+            @if (Model.Any())
+            {
+                <table class="table table-striped table-bordered table-advance table-hover" id="sample_1">
+                    <thead>
+                        <tr>
+                            <th>@Calendar.V_Calendar_Name</th>
+                            <td>@Calendar.V_Created</td>
+                            <td>@Calendar.V_CreatedBy</td>
+                            <td>@Calendar.V_View</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var calender in Model)
+                        {
+                            <tr>                            
+                                <td>
+                                    <a href="/Calendar/GenerateDefault/@calender.id" 
+                                       title="@(string.IsNullOrEmpty(calender.Description)? calender.Name : calender.Description)">
+                                        @calender.Name
+                                    </a>
+                                </td> 
+                                <td>
+                                    @calender.Created.ToShortDateString()
+                                </td>                          
+                                <td>
+                                    @(calender.User.firstname + " " + calender.User.surname)
+                                </td>
+                                <td>
+                                     <button class="btn" onclick="javascript:NavigateTo('/Calendar/GenerateDefault/@calender.id');">
+                                       <i class="icon-eye-open"></i>
+                                       @Calendar.V_View
+                                   </button>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            }
+            else
+            {
+                <div class="alert alert-danger">
+                    @Calendar.V_No_Calendar
+                </div>
+            }
         
+        </div>
     </div>
-  </div>
+</div>
+
 
 
 
